# ACE-Step-1.5-xpu

./: check_update.sh  download_models.sh  install_uv.sh  install_xpu.sh  merge_config.sh  pyproject.toml  quick_test.sh  requirements.txt  run_studio.sh  run_turbo.sh  run_xpu.sh  start_api_server.sh  start_gradio_ui.sh  test_env_detection.sh  test_git_update.sh
acestep/gradio_ui/events/: __init__.py  training_handlers.py
acestep/gradio_ui/interfaces/: training.py
acestep/training/: dataset_builder.py
